# bevy-asteroids

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  create_release  flake.nix
.github/workflows/: release.yaml
assets/: ufo_settings.ron
assets/meshes/: ufo.glb
models/: ufo.blend  ufo.blend1
proptest-regressions/: main.txt
src/: asteroid.rs  asteroids.rs  edge_wrap.rs  explosion.rs  game_state.rs  input.rs  main.rs  mesh_utils.rs  player.rs  projectile.rs  shatter.rs  ship.rs  split_mesh.rs  turret.rs  ufo.rs  ui.rs  utils.rs
src/ufo/: movement.rs  tractor_beam.rs
web/: index.html
