[package]
name = "asteroids"
version = "0.1.0"
authors = ["Simon Voordouw <simonvoordouw@gmail.com>"]
edition = "2021"


[profile.release]
lto = true
codegen-units = 1

[profile.release-debug]
inherits = "release"
debug = 1

[profile.dev-opt]
inherits = "dev"
opt-level = 1
debug-assertions = true

[profile.dev-opt.package."*"]
opt-level = 3

[dependencies]
bevy_rapier2d = { version = "0.26.0", features = ["wasm-bindgen"] }
itertools = "0.13.0"
rand = "0.8.5"
smallvec = "1.13.2"
tracing = "0.1.40"

[dependencies.bevy]
version = "0.13"
default-features = false
features = [
    "bevy_asset",
    "bevy_audio",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_text",
    "bevy_ui",
    "mp3",
    "x11",
    "wayland",
    "webgl2",
    "bevy_debug_stepping",
]

[dev-dependencies]
assert_approx_eq = "1.1.0"
proptest = "1.4.0"
